[metadata]
name = twicorder_search
version = 0.3.0
author = Michael Thingnes
author_email = thimic@gmail.com
description = A Twitter crawler for Python 3 based on Twitter's public API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thimic/twicorder-search
project_urls =
    Bug Tracker = https://github.com/thimic/twicorder-search/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
download_url = https://github.com/thimic/twicorder-search/archive/v0.3.0.tar.gz
keywords = twitter, crawler, research

[options]
package_dir =
    = src
packages = find:
scripts =
    bin/twicorder
python_requires = >=3.7
install_requires =
    Authlib ~=0.14.3
    PyYAML ~=5.1
    aiosqlite ~=0.13.0
    asyncclick ~=7.0.9
    asyncio ~=3.4.3
    click ~=7.1.2
    httpx ~=0.13.3

[options.packages.find]
where = src
